# direct-murmur-hash

./: Main.hs  Murmur3.cabal  direct-murmur-hash.cabal
Data/Digest/: Murmur3.hs
