name: Murmur3
version: 1.0
cabal-version: >= 1.12
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp <ireney.knapp@gmail.com>
maintainer: ireney.knapp@gmail.com
homepage: http://ireneknapp.com/software/
bug-reports: http://ireneknapp.com/issues/create/
category: Data
synopsis: An implementation of the MurmurHash3 algorithm
description:

Source-Repository head
  type: darcs
  location: http://ireneknapp.com/software/darcs/Murmur3/

Library
  exposed-modules: Data.Digest.Murmur3
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.5 && < 1
  default-language: Haskell2010

Executable test
  main-is: Main.hs
  other-modules: Data.Digest.Murmur3
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.1.5 && < 1,
                 utf8-string >= 0.3.7 && < 1
  default-language: Haskell2010
